@@ -1,18 +1,20 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.join.mapper;
 
 import org.apache.lucene.document.Field;
-import org.apache.lucene.document.FieldType;
 import org.apache.lucene.document.SortedDocValuesField;
-import org.apache.lucene.index.IndexOptions;
+import org.apache.lucene.document.StringField;
 import org.apache.lucene.util.BytesRef;
+import org.elasticsearch.common.logging.DeprecationCategory;
+import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.lucene.Lucene;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.analysis.NamedAnalyzer;
@@ -46,7 +48,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * A {@link FieldMapper} that creates hierarchical joins (parent-join) between documents in the same index.
@@ -54,19 +55,10 @@ import java.util.stream.Collectors;
  */
 public final class ParentJoinFieldMapper extends FieldMapper {
 
+    private static final DeprecationLogger DEPRECATION_LOGGER = DeprecationLogger.getLogger(ParentJoinFieldMapper.class);
+
     public static final String NAME = "join";
     public static final String CONTENT_TYPE = "join";
-
-    public static class Defaults {
-        public static final FieldType FIELD_TYPE = new FieldType();
-
-        static {
-            FIELD_TYPE.setTokenized(false);
-            FIELD_TYPE.setOmitNorms(true);
-            FIELD_TYPE.setIndexOptions(IndexOptions.DOCS);
-            FIELD_TYPE.freeze();
-        }
-    }
 
     private static void checkIndexCompatibility(IndexSettings settings, String name) {
         String indexName = settings.getIndex().getName();
@@ -125,16 +117,23 @@ public final class ParentJoinFieldMapper extends FieldMapper {
 
         @Override
         public ParentJoinFieldMapper build(MapperBuilderContext context) {
-            checkObjectOrNested(context, name);
+            if (multiFieldsBuilder.hasMultiFields()) {
+                DEPRECATION_LOGGER.warn(
+                    DeprecationCategory.MAPPINGS,
+                    CONTENT_TYPE + "_multifields",
+                    "Adding multifields to [" + CONTENT_TYPE + "] mappers has no effect and will be forbidden in future"
+                );
+            }
+            checkObjectOrNested(context, leafName());
             final Map<String, ParentIdFieldMapper> parentIdFields = new HashMap<>();
             relations.get()
                 .stream()
-                .map(relation -> new ParentIdFieldMapper(name + "#" + relation.parent(), eagerGlobalOrdinals.get()))
-                .forEach(mapper -> parentIdFields.put(mapper.name(), mapper));
-            Joiner joiner = new Joiner(name(), relations.get());
+                .map(relation -> new ParentIdFieldMapper(leafName() + "#" + relation.parent(), eagerGlobalOrdinals.get()))
+                .forEach(mapper -> parentIdFields.put(mapper.fullPath(), mapper));
+            Joiner joiner = new Joiner(leafName(), relations.get());
             return new ParentJoinFieldMapper(
-                name,
-                new JoinFieldType(context.buildFullName(name), joiner, meta.get()),
+                leafName(),
+                new JoinFieldType(context.buildFullName(leafName()), joiner, meta.get()),
                 Collections.unmodifiableMap(parentIdFields),
                 eagerGlobalOrdinals.get(),
                 relations.get()
@@ -212,7 +211,7 @@ public final class ParentJoinFieldMapper extends FieldMapper {
         boolean eagerGlobalOrdinals,
         List<Relations> relations
     ) {
-        super(simpleName, mappedFieldType, MultiFields.empty(), CopyTo.empty(), false, null);
+        super(simpleName, mappedFieldType, BuilderParams.empty());
         this.parentIdFields = parentIdFields;
         this.eagerGlobalOrdinals = eagerGlobalOrdinals;
         this.relations = relations;
@@ -245,8 +244,13 @@ public final class ParentJoinFieldMapper extends FieldMapper {
     }
 
     @Override
+    protected boolean supportsParsingObject() {
+        return true;
+    }
+
+    @Override
     public void parse(DocumentParserContext context) throws IOException {
-        context.path().add(simpleName());
+        context.path().add(leafName());
         XContentParser.Token token = context.parser().currentToken();
         String name = null;
         String parent = null;
@@ -261,13 +265,17 @@ public final class ParentJoinFieldMapper extends FieldMapper {
                     } else if ("parent".equals(currentFieldName)) {
                         parent = context.parser().text();
                     } else {
-                        throw new IllegalArgumentException("unknown field name [" + currentFieldName + "] in join field [" + name() + "]");
+                        throw new IllegalArgumentException(
+                            "unknown field name [" + currentFieldName + "] in join field [" + fullPath() + "]"
+                        );
                     }
                 } else if (token == XContentParser.Token.VALUE_NUMBER) {
                     if ("parent".equals(currentFieldName)) {
                         parent = context.parser().numberValue().toString();
                     } else {
-                        throw new IllegalArgumentException("unknown field name [" + currentFieldName + "] in join field [" + name() + "]");
+                        throw new IllegalArgumentException(
+                            "unknown field name [" + currentFieldName + "] in join field [" + fullPath() + "]"
+                        );
                     }
                 }
             }
@@ -275,23 +283,23 @@ public final class ParentJoinFieldMapper extends FieldMapper {
             name = context.parser().text();
             parent = null;
         } else {
-            throw new IllegalStateException("[" + name() + "] expected START_OBJECT or VALUE_STRING but was: " + token);
+            throw new IllegalStateException("[" + fullPath() + "] expected START_OBJECT or VALUE_STRING but was: " + token);
         }
 
         if (name == null) {
-            throw new IllegalArgumentException("null join name in field [" + name() + "]");
+            throw new IllegalArgumentException("null join name in field [" + fullPath() + "]");
         }
 
         if (fieldType().joiner.knownRelation(name) == false) {
-            throw new IllegalArgumentException("unknown join name [" + name + "] for field [" + name() + "]");
+            throw new IllegalArgumentException("unknown join name [" + name + "] for field [" + fullPath() + "]");
         }
         if (fieldType().joiner.childTypeExists(name)) {
             // Index the document as a child
             if (parent == null) {
-                throw new IllegalArgumentException("[parent] is missing for join field [" + name() + "]");
+                throw new IllegalArgumentException("[parent] is missing for join field [" + fullPath() + "]");
             }
-            if (context.sourceToParse().routing() == null) {
-                throw new IllegalArgumentException("[routing] is missing for join field [" + name() + "]");
+            if (context.routing() == null) {
+                throw new IllegalArgumentException("[routing] is missing for join field [" + fullPath() + "]");
             }
             String fieldName = fieldType().joiner.parentJoinField(name);
             parentIdFields.get(fieldName).indexValue(context, parent);
@@ -303,7 +311,7 @@ public final class ParentJoinFieldMapper extends FieldMapper {
         }
 
         BytesRef binaryValue = new BytesRef(name);
-        Field field = new Field(fieldType().name(), binaryValue, Defaults.FIELD_TYPE);
+        Field field = new StringField(fieldType().name(), binaryValue, Field.Store.NO);
         context.doc().add(field);
         context.doc().add(new SortedDocValuesField(fieldType().name(), binaryValue));
         context.path().remove();
@@ -326,7 +334,7 @@ public final class ParentJoinFieldMapper extends FieldMapper {
 
     @Override
     public FieldMapper.Builder getMergeBuilder() {
-        return new Builder(simpleName()).init(this);
+        return new Builder(leafName()).init(this);
     }
 
     @Override
@@ -336,7 +344,7 @@ public final class ParentJoinFieldMapper extends FieldMapper {
             .map(mappingLookup::getFieldType)
             .filter(ft -> ft instanceof JoinFieldType)
             .map(MappedFieldType::name)
-            .collect(Collectors.toList());
+            .toList();
         if (joinFields.size() > 1) {
             throw new IllegalArgumentException("Only one [parent-join] field can be defined per index, got " + joinFields);
         }
