@@ -1,49 +1,56 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.test;
 
 import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.core.Nullable;
 
 import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.NavigableSet;
 import java.util.Random;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.KnownTransportVersions.ALL_VERSIONS;
+import static org.apache.lucene.tests.util.LuceneTestCase.random;
 
 public class TransportVersionUtils {
+
+    private static final NavigableSet<TransportVersion> RELEASED_VERSIONS = Collections.unmodifiableNavigableSet(
+        new TreeSet<>(TransportVersion.getAllVersions())
+    );
+
     /** Returns all released versions */
-    public static List<TransportVersion> allReleasedVersions() {
-        return ALL_VERSIONS;
+    public static NavigableSet<TransportVersion> allReleasedVersions() {
+        return RELEASED_VERSIONS;
     }
 
     /** Returns the oldest known {@link TransportVersion} */
     public static TransportVersion getFirstVersion() {
-        return ALL_VERSIONS.get(0);
+        return allReleasedVersions().getFirst();
     }
 
     /** Returns a random {@link TransportVersion} from all available versions. */
     public static TransportVersion randomVersion() {
-        return ESTestCase.randomFrom(ALL_VERSIONS);
+        return VersionUtils.randomFrom(random(), allReleasedVersions(), TransportVersion::fromId);
     }
 
     /** Returns a random {@link TransportVersion} from all available versions without the ignore set */
     public static TransportVersion randomVersion(Set<TransportVersion> ignore) {
-        return ESTestCase.randomFrom(ALL_VERSIONS.stream().filter(v -> ignore.contains(v) == false).collect(Collectors.toList()));
+        return ESTestCase.randomFrom(allReleasedVersions().stream().filter(v -> ignore.contains(v) == false).collect(Collectors.toList()));
     }
 
     /** Returns a random {@link TransportVersion} from all available versions. */
     public static TransportVersion randomVersion(Random random) {
-        return ALL_VERSIONS.get(random.nextInt(ALL_VERSIONS.size()));
+        return VersionUtils.randomFrom(random, allReleasedVersions(), TransportVersion::fromId);
     }
 
     /** Returns a random {@link TransportVersion} between <code>minVersion</code> and <code>maxVersion</code> (inclusive). */
@@ -52,87 +59,60 @@ public class TransportVersionUtils {
         @Nullable TransportVersion minVersion,
         @Nullable TransportVersion maxVersion
     ) {
-        int minVersionIndex = 0;
-        if (minVersion != null) {
-            minVersionIndex = ALL_VERSIONS.indexOf(minVersion);
-        }
-        int maxVersionIndex = ALL_VERSIONS.size() - 1;
-        if (maxVersion != null) {
-            maxVersionIndex = ALL_VERSIONS.indexOf(maxVersion);
-        }
-        if (minVersionIndex == -1) {
-            throw new IllegalArgumentException("minVersion [" + minVersion + "] does not exist.");
-        } else if (maxVersionIndex == -1) {
-            throw new IllegalArgumentException("maxVersion [" + maxVersion + "] does not exist.");
-        } else if (minVersionIndex > maxVersionIndex) {
+        if (minVersion != null && maxVersion != null && maxVersion.before(minVersion)) {
             throw new IllegalArgumentException("maxVersion [" + maxVersion + "] cannot be less than minVersion [" + minVersion + "]");
-        } else {
-            // minVersionIndex is inclusive so need to add 1 to this index
-            int range = maxVersionIndex + 1 - minVersionIndex;
-            return ALL_VERSIONS.get(minVersionIndex + random.nextInt(range));
         }
+
+        NavigableSet<TransportVersion> versions = allReleasedVersions();
+        if (minVersion != null) {
+            if (versions.contains(minVersion) == false) {
+                throw new IllegalArgumentException("minVersion [" + minVersion + "] does not exist.");
+            }
+            versions = versions.tailSet(minVersion, true);
+        }
+        if (maxVersion != null) {
+            if (versions.contains(maxVersion) == false) {
+                throw new IllegalArgumentException("maxVersion [" + maxVersion + "] does not exist.");
+            }
+            versions = versions.headSet(maxVersion, true);
+        }
+
+        return VersionUtils.randomFrom(random, versions, TransportVersion::fromId);
     }
 
     public static TransportVersion getPreviousVersion() {
-        TransportVersion version = getPreviousVersion(TransportVersion.CURRENT);
-        assert version.before(TransportVersion.CURRENT);
+        TransportVersion version = getPreviousVersion(TransportVersion.current());
+        assert version.before(TransportVersion.current());
         return version;
     }
 
     public static TransportVersion getPreviousVersion(TransportVersion version) {
-        int place = Collections.binarySearch(ALL_VERSIONS, version);
-        if (place < 0) {
-            // version does not exist - need the item before the index this version should be inserted
-            place = -(place + 1);
-        }
-
-        if (place < 1) {
+        TransportVersion lower = allReleasedVersions().lower(version);
+        if (lower == null) {
             throw new IllegalArgumentException("couldn't find any released versions before [" + version + "]");
         }
-        return ALL_VERSIONS.get(place - 1);
+        return lower;
     }
 
     public static TransportVersion getNextVersion(TransportVersion version) {
-        int place = Collections.binarySearch(ALL_VERSIONS, version);
-        if (place < 0) {
-            // version does not exist - need the item at the index this version should be inserted
-            place = -(place + 1);
-        } else {
-            // need the *next* version
-            place++;
+        return getNextVersion(version, false);
+    }
+
+    public static TransportVersion getNextVersion(TransportVersion version, boolean createIfNecessary) {
+        TransportVersion higher = allReleasedVersions().higher(version);
+        if (higher == null) {
+            if (createIfNecessary) {
+                // create a new transport version one greater than specified
+                return new TransportVersion(version.id() + 1);
+            } else {
+                throw new IllegalArgumentException("couldn't find any released versions after [" + version + "]");
+            }
         }
-
-        if (place < 0 || place >= ALL_VERSIONS.size()) {
-            throw new IllegalArgumentException("couldn't find any released versions after [" + version + "]");
-        }
-        return ALL_VERSIONS.get(place);
+        return higher;
     }
 
-    public static boolean isCompatible(TransportVersion version1, TransportVersion version2) {
-        return version1.onOrAfter(minimumCompatibilityVersion(version2)) && version2.onOrAfter(minimumCompatibilityVersion(version1));
-    }
-
-    public static TransportVersion minimumCompatibilityVersion(TransportVersion version) {
-        return VersionUtils.findVersion(version).minimumCompatibilityVersion().transportVersion;
-    }
-
-    /** Returns a random {@link TransportVersion} from all available versions, that is compatible with the given version. */
-    public static TransportVersion randomCompatibleVersion(Random random, TransportVersion version) {
-        final List<TransportVersion> compatible = ALL_VERSIONS.stream().filter(v -> isCompatible(v, version)).toList();
-        return compatible.get(random.nextInt(compatible.size()));
-    }
-
-    public static TransportVersion randomPreviousCompatibleVersion(Random random, TransportVersion version) {
-        return randomVersionBetween(random, minimumCompatibilityVersion(version), getPreviousVersion(version));
-    }
-
-    /** returns the first future compatible version */
-    public static TransportVersion compatibleFutureVersion(TransportVersion version) {
-        final Optional<TransportVersion> opt = ALL_VERSIONS.stream()
-            .filter(version::before)
-            .filter(v -> isCompatible(v, version))
-            .findAny();
-        assert opt.isPresent() : "no future compatible version for " + version;
-        return opt.get();
+    /** Returns a random {@code TransportVersion} that is compatible with {@link TransportVersion#current()} */
+    public static TransportVersion randomCompatibleVersion(Random random) {
+        return randomVersionBetween(random, TransportVersions.MINIMUM_COMPATIBLE, TransportVersion.current());
     }
 }
