@@ -7,8 +7,8 @@
 package org.elasticsearch.xpack.ccr;
 
 import org.apache.lucene.util.SetOnce;
-import org.elasticsearch.action.ActionRequest;
-import org.elasticsearch.action.ActionResponse;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.action.RequestValidators;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequest;
 import org.elasticsearch.action.admin.indices.mapping.put.PutMappingRequest;
@@ -16,7 +16,6 @@ import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
-import org.elasticsearch.cluster.routing.allocation.AllocationService;
 import org.elasticsearch.cluster.routing.allocation.decider.AllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
@@ -26,8 +25,9 @@ import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.settings.SettingsFilter;
 import org.elasticsearch.common.settings.SettingsModule;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.env.Environment;
-import org.elasticsearch.env.NodeEnvironment;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.index.IndexModule;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.engine.EngineFactory;
@@ -40,17 +40,13 @@ import org.elasticsearch.plugins.EnginePlugin;
 import org.elasticsearch.plugins.PersistentTaskPlugin;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.plugins.RepositoryPlugin;
-import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
-import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ExecutorBuilder;
 import org.elasticsearch.threadpool.FixedExecutorBuilder;
 import org.elasticsearch.threadpool.ThreadPool;
-import org.elasticsearch.tracing.Tracer;
-import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.ParseField;
 import org.elasticsearch.xpack.ccr.action.AutoFollowCoordinator;
@@ -94,7 +90,7 @@ import org.elasticsearch.xpack.ccr.rest.RestPutFollowAction;
 import org.elasticsearch.xpack.ccr.rest.RestResumeAutoFollowPatternAction;
 import org.elasticsearch.xpack.ccr.rest.RestResumeFollowAction;
 import org.elasticsearch.xpack.ccr.rest.RestUnfollowAction;
-import org.elasticsearch.xpack.core.XPackFeatureSet;
+import org.elasticsearch.xpack.core.XPackFeatureUsage;
 import org.elasticsearch.xpack.core.XPackField;
 import org.elasticsearch.xpack.core.action.XPackInfoFeatureAction;
 import org.elasticsearch.xpack.core.action.XPackUsageFeatureAction;
@@ -121,6 +117,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 
 import static java.util.Collections.emptyList;
@@ -140,6 +137,7 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
     public static final String CCR_CUSTOM_METADATA_REMOTE_CLUSTER_NAME_KEY = "remote_cluster_name";
 
     public static final String REQUESTED_OPS_MISSING_METADATA_KEY = "es.requested_operations_missing";
+    public static final TransportVersion TRANSPORT_VERSION_ACTION_WITH_SHARD_ID = TransportVersions.V_8_9_X;
 
     private final boolean enabled;
     private final Settings settings;
@@ -172,43 +170,29 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
 
     @Override
     @SuppressWarnings("HiddenField")
-    public Collection<Object> createComponents(
-        final Client client,
-        final ClusterService clusterService,
-        final ThreadPool threadPool,
-        final ResourceWatcherService resourceWatcherService,
-        final ScriptService scriptService,
-        final NamedXContentRegistry xContentRegistry,
-        final Environment environment,
-        final NodeEnvironment nodeEnvironment,
-        final NamedWriteableRegistry namedWriteableRegistry,
-        final IndexNameExpressionResolver expressionResolver,
-        final Supplier<RepositoriesService> repositoriesServiceSupplier,
-        Tracer tracer,
-        AllocationService allocationService
-    ) {
-        this.client = client;
+    public Collection<?> createComponents(PluginServices services) {
+        this.client = services.client();
         if (enabled == false) {
             return emptyList();
         }
 
-        CcrSettings ccrSettings = new CcrSettings(settings, clusterService.getClusterSettings());
+        CcrSettings ccrSettings = new CcrSettings(settings, services.clusterService().getClusterSettings());
         this.ccrSettings.set(ccrSettings);
-        CcrRestoreSourceService restoreSourceService = new CcrRestoreSourceService(threadPool, ccrSettings);
+        CcrRestoreSourceService restoreSourceService = new CcrRestoreSourceService(services.threadPool(), ccrSettings);
         this.restoreSourceService.set(restoreSourceService);
-        return Arrays.asList(
+        return List.of(
             ccrLicenseChecker,
             restoreSourceService,
-            new CcrRepositoryManager(settings, clusterService, client),
-            new ShardFollowTaskCleaner(clusterService, threadPool, client),
+            new CcrRepositoryManager(settings, services.clusterService(), client),
+            new ShardFollowTaskCleaner(services.clusterService(), services.threadPool(), client),
             new AutoFollowCoordinator(
                 settings,
                 client,
-                clusterService,
+                services.clusterService(),
                 ccrLicenseChecker,
-                threadPool::relativeTimeInMillis,
-                threadPool::absoluteTimeInMillis,
-                threadPool.executor(Ccr.CCR_THREAD_POOL_NAME)
+                services.threadPool().relativeTimeInMillisSupplier(),
+                services.threadPool()::absoluteTimeInMillis,
+                services.threadPool().executor(Ccr.CCR_THREAD_POOL_NAME)
             )
         );
     }
@@ -225,50 +209,47 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
         return Collections.singletonList(new ShardFollowTasksExecutor(client, threadPool, clusterService, settingsModule));
     }
 
-    public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        var usageAction = new ActionHandler<>(XPackUsageFeatureAction.CCR, CCRUsageTransportAction.class);
-        var infoAction = new ActionHandler<>(XPackInfoFeatureAction.CCR, CCRInfoTransportAction.class);
+    public List<ActionHandler> getActions() {
+        var usageAction = new ActionHandler(XPackUsageFeatureAction.CCR, CCRUsageTransportAction.class);
+        var infoAction = new ActionHandler(XPackInfoFeatureAction.CCR, CCRInfoTransportAction.class);
         if (enabled == false) {
             return Arrays.asList(usageAction, infoAction);
         }
 
         return Arrays.asList(
             // internal actions
-            new ActionHandler<>(BulkShardOperationsAction.INSTANCE, TransportBulkShardOperationsAction.class),
-            new ActionHandler<>(ShardChangesAction.INSTANCE, ShardChangesAction.TransportAction.class),
-            new ActionHandler<>(
+            new ActionHandler(BulkShardOperationsAction.INSTANCE, TransportBulkShardOperationsAction.class),
+            new ActionHandler(ShardChangesAction.INSTANCE, ShardChangesAction.TransportAction.class),
+            new ActionHandler(
                 PutInternalCcrRepositoryAction.INSTANCE,
                 PutInternalCcrRepositoryAction.TransportPutInternalRepositoryAction.class
             ),
-            new ActionHandler<>(
+            new ActionHandler(
                 DeleteInternalCcrRepositoryAction.INSTANCE,
                 DeleteInternalCcrRepositoryAction.TransportDeleteInternalRepositoryAction.class
             ),
-            new ActionHandler<>(PutCcrRestoreSessionAction.INSTANCE, PutCcrRestoreSessionAction.TransportPutCcrRestoreSessionAction.class),
-            new ActionHandler<>(
-                ClearCcrRestoreSessionAction.INSTANCE,
-                ClearCcrRestoreSessionAction.TransportDeleteCcrRestoreSessionAction.class
-            ),
-            new ActionHandler<>(
-                GetCcrRestoreFileChunkAction.INSTANCE,
-                GetCcrRestoreFileChunkAction.TransportGetCcrRestoreFileChunkAction.class
-            ),
+            new ActionHandler(PutCcrRestoreSessionAction.INTERNAL_INSTANCE, PutCcrRestoreSessionAction.InternalTransportAction.class),
+            new ActionHandler(PutCcrRestoreSessionAction.INSTANCE, PutCcrRestoreSessionAction.TransportAction.class),
+            new ActionHandler(ClearCcrRestoreSessionAction.INTERNAL_INSTANCE, ClearCcrRestoreSessionAction.InternalTransportAction.class),
+            new ActionHandler(ClearCcrRestoreSessionAction.INSTANCE, ClearCcrRestoreSessionAction.TransportAction.class),
+            new ActionHandler(GetCcrRestoreFileChunkAction.INTERNAL_INSTANCE, GetCcrRestoreFileChunkAction.InternalTransportAction.class),
+            new ActionHandler(GetCcrRestoreFileChunkAction.INSTANCE, GetCcrRestoreFileChunkAction.TransportAction.class),
             // stats action
-            new ActionHandler<>(FollowStatsAction.INSTANCE, TransportFollowStatsAction.class),
-            new ActionHandler<>(CcrStatsAction.INSTANCE, TransportCcrStatsAction.class),
-            new ActionHandler<>(FollowInfoAction.INSTANCE, TransportFollowInfoAction.class),
+            new ActionHandler(FollowStatsAction.INSTANCE, TransportFollowStatsAction.class),
+            new ActionHandler(CcrStatsAction.INSTANCE, TransportCcrStatsAction.class),
+            new ActionHandler(FollowInfoAction.INSTANCE, TransportFollowInfoAction.class),
             // follow actions
-            new ActionHandler<>(PutFollowAction.INSTANCE, TransportPutFollowAction.class),
-            new ActionHandler<>(ResumeFollowAction.INSTANCE, TransportResumeFollowAction.class),
-            new ActionHandler<>(PauseFollowAction.INSTANCE, TransportPauseFollowAction.class),
-            new ActionHandler<>(UnfollowAction.INSTANCE, TransportUnfollowAction.class),
+            new ActionHandler(PutFollowAction.INSTANCE, TransportPutFollowAction.class),
+            new ActionHandler(ResumeFollowAction.INSTANCE, TransportResumeFollowAction.class),
+            new ActionHandler(PauseFollowAction.INSTANCE, TransportPauseFollowAction.class),
+            new ActionHandler(UnfollowAction.INSTANCE, TransportUnfollowAction.class),
             // auto-follow actions
-            new ActionHandler<>(DeleteAutoFollowPatternAction.INSTANCE, TransportDeleteAutoFollowPatternAction.class),
-            new ActionHandler<>(PutAutoFollowPatternAction.INSTANCE, TransportPutAutoFollowPatternAction.class),
-            new ActionHandler<>(GetAutoFollowPatternAction.INSTANCE, TransportGetAutoFollowPatternAction.class),
-            new ActionHandler<>(ActivateAutoFollowPatternAction.INSTANCE, TransportActivateAutoFollowPatternAction.class),
+            new ActionHandler(DeleteAutoFollowPatternAction.INSTANCE, TransportDeleteAutoFollowPatternAction.class),
+            new ActionHandler(PutAutoFollowPatternAction.INSTANCE, TransportPutAutoFollowPatternAction.class),
+            new ActionHandler(GetAutoFollowPatternAction.INSTANCE, TransportGetAutoFollowPatternAction.class),
+            new ActionHandler(ActivateAutoFollowPatternAction.INSTANCE, TransportActivateAutoFollowPatternAction.class),
             // forget follower action
-            new ActionHandler<>(ForgetFollowerAction.INSTANCE, TransportForgetFollowerAction.class),
+            new ActionHandler(ForgetFollowerAction.INSTANCE, TransportForgetFollowerAction.class),
             usageAction,
             infoAction
         );
@@ -276,12 +257,14 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
 
     public List<RestHandler> getRestHandlers(
         Settings unused,
+        NamedWriteableRegistry namedWriteableRegistry,
         RestController restController,
         ClusterSettings clusterSettings,
         IndexScopedSettings indexScopedSettings,
         SettingsFilter settingsFilter,
         IndexNameExpressionResolver indexNameExpressionResolver,
-        Supplier<DiscoveryNodes> nodesInCluster
+        Supplier<DiscoveryNodes> nodesInCluster,
+        Predicate<NodeFeature> clusterSupportsFeature
     ) {
         if (enabled == false) {
             return emptyList();
@@ -321,7 +304,7 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
             ),
 
             // usage api
-            new NamedWriteableRegistry.Entry(XPackFeatureSet.Usage.class, XPackField.CCR, CCRInfoTransportAction.Usage::new)
+            new NamedWriteableRegistry.Entry(XPackFeatureUsage.class, XPackField.CCR, CCRInfoTransportAction.Usage::new)
         );
     }
 
@@ -329,7 +312,7 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
         return Arrays.asList(
             // auto-follow metadata, persisted into the cluster state as XContent
             new NamedXContentRegistry.Entry(
-                Metadata.Custom.class,
+                Metadata.ProjectCustom.class,
                 new ParseField(AutoFollowMetadata.TYPE),
                 AutoFollowMetadata::fromXContent
             ),
@@ -373,12 +356,15 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
 
     @SuppressWarnings("HiddenField")
     public List<ExecutorBuilder<?>> getExecutorBuilders(Settings settings) {
-        if (enabled == false) {
-            return Collections.emptyList();
-        }
-
         return Collections.singletonList(
-            new FixedExecutorBuilder(settings, CCR_THREAD_POOL_NAME, 32, 100, "xpack.ccr.ccr_thread_pool", false)
+            new FixedExecutorBuilder(
+                settings,
+                CCR_THREAD_POOL_NAME,
+                32,
+                100,
+                "xpack.ccr.ccr_thread_pool",
+                EsExecutors.TaskTrackingConfig.DO_NOT_TRACK
+            )
         );
     }
 
@@ -389,7 +375,8 @@ public class Ccr extends Plugin implements ActionPlugin, PersistentTaskPlugin, E
         ClusterService clusterService,
         RecoverySettings recoverySettings
     ) {
-        Repository.Factory repositoryFactory = (metadata) -> new CcrRepository(
+        Repository.Factory repositoryFactory = (projectId, metadata) -> new CcrRepository(
+            projectId,
             metadata,
             client,
             settings,
