@@ -7,13 +7,15 @@
 
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.Version;
+import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ProjectState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.NodesShutdownMetadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata;
-import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.RoutingTable;
@@ -24,16 +26,26 @@ import org.elasticsearch.cluster.routing.UnassignedInfo;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.node.Node;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
+import static org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata.Type.SIGTERM;
+import static org.elasticsearch.cluster.routing.TestShardRouting.shardRoutingBuilder;
 import static org.hamcrest.Matchers.containsString;
 
 public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkReadyStep> {
+    private static final List<SingleNodeShutdownMetadata.Type> REMOVE_SHUTDOWN_TYPES = List.of(
+        SingleNodeShutdownMetadata.Type.REPLACE,
+        SingleNodeShutdownMetadata.Type.REMOVE,
+        SingleNodeShutdownMetadata.Type.SIGTERM
+    );
 
     @Override
     public CheckShrinkReadyStep createRandomInstance() {
@@ -66,7 +78,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
         Settings.Builder node1Settings = Settings.builder();
@@ -101,7 +113,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -134,7 +146,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -168,7 +180,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -209,7 +221,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -243,7 +255,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -278,7 +290,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
         Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -293,14 +305,9 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
         IndexRoutingTable.Builder indexRoutingTable = IndexRoutingTable.builder(index)
             .addShard(TestShardRouting.newShardRouting(new ShardId(index, 0), "node1", true, ShardRoutingState.STARTED))
             .addShard(
-                TestShardRouting.newShardRouting(
-                    new ShardId(index, 0),
-                    null,
-                    null,
-                    false,
-                    ShardRoutingState.UNASSIGNED,
+                shardRoutingBuilder(new ShardId(index, 0), null, false, ShardRoutingState.UNASSIGNED).withUnassignedInfo(
                     randomUnassignedInfo("the shard is intentionally unassigned")
-                )
+                ).build()
             );
 
         CheckShrinkReadyStep step = createRandomInstance();
@@ -336,9 +343,9 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
      */
     public void testExecuteReplicasNotAllocatedOnSingleNode() {
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        Map<String, String> requires = Collections.singletonMap("_id", "node1");
+        Map<String, String> requires = Map.of("_id", "node1");
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -351,14 +358,9 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
             .addShard(TestShardRouting.newShardRouting(new ShardId(index, 1), "node1", false, ShardRoutingState.STARTED))
             .addShard(TestShardRouting.newShardRouting(new ShardId(index, 1), "node2", true, ShardRoutingState.STARTED))
             .addShard(
-                TestShardRouting.newShardRouting(
-                    new ShardId(index, 0),
-                    null,
-                    null,
-                    false,
-                    ShardRoutingState.UNASSIGNED,
+                shardRoutingBuilder(new ShardId(index, 0), null, false, ShardRoutingState.UNASSIGNED).withUnassignedInfo(
                     new UnassignedInfo(UnassignedInfo.Reason.REPLICA_ADDED, "no attempt")
-                )
+                ).build()
             );
 
         CheckShrinkReadyStep step = createRandomInstance();
@@ -377,9 +379,9 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
 
     public void testExecuteReplicasButCopiesNotPresent() {
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        Map<String, String> requires = Collections.singletonMap("_id", "node1");
+        Map<String, String> requires = Map.of("_id", "node1");
         Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
         Settings.Builder expectedSettings = Settings.builder();
@@ -392,14 +394,9 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
             .addShard(TestShardRouting.newShardRouting(new ShardId(index, 1), "node2", false, ShardRoutingState.STARTED))
             .addShard(TestShardRouting.newShardRouting(new ShardId(index, 1), "node3", true, ShardRoutingState.STARTED))
             .addShard(
-                TestShardRouting.newShardRouting(
-                    new ShardId(index, 0),
-                    null,
-                    null,
-                    false,
-                    ShardRoutingState.UNASSIGNED,
+                shardRoutingBuilder(new ShardId(index, 0), null, false, ShardRoutingState.UNASSIGNED).withUnassignedInfo(
                     new UnassignedInfo(UnassignedInfo.Reason.REPLICA_ADDED, "no attempt")
-                )
+                ).build()
             );
 
         CheckShrinkReadyStep step = createRandomInstance();
@@ -418,171 +415,181 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
 
     public void testExecuteIndexMissing() throws Exception {
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE).build();
+        ProjectState state = projectStateWithEmptyProject();
 
         CheckShrinkReadyStep step = createRandomInstance();
 
-        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-        assertFalse(actualResult.isComplete());
-        assertNull(actualResult.getInfomationContext());
+        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+        assertFalse(actualResult.complete());
+        assertNull(actualResult.informationContext());
     }
 
     public void testStepCompletableIfAllShardsActive() {
-        Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
-        Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
-            .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
-            .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
-        Settings.Builder expectedSettings = Settings.builder();
-        Settings.Builder node1Settings = Settings.builder();
-        Settings.Builder node2Settings = Settings.builder();
-        requires.forEach((k, v) -> {
-            existingSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
-            expectedSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
-            node1Settings.put(Node.NODE_ATTRIBUTES.getKey() + k, v);
-        });
+        for (SingleNodeShutdownMetadata.Type type : REMOVE_SHUTDOWN_TYPES) {
+            Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
+            Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
+            Settings.Builder existingSettings = Settings.builder()
+                .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+                .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
+                .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
+            Settings.Builder expectedSettings = Settings.builder();
+            Settings.Builder node1Settings = Settings.builder();
+            Settings.Builder node2Settings = Settings.builder();
+            requires.forEach((k, v) -> {
+                existingSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
+                expectedSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
+                node1Settings.put(Node.NODE_ATTRIBUTES.getKey() + k, v);
+            });
 
-        IndexRoutingTable.Builder indexRoutingTable = IndexRoutingTable.builder(index)
-            .addShard(TestShardRouting.newShardRouting(new ShardId(index, 0), "node1", true, ShardRoutingState.STARTED));
+            IndexRoutingTable.Builder indexRoutingTable = IndexRoutingTable.builder(index)
+                .addShard(TestShardRouting.newShardRouting(new ShardId(index, 0), "node1", true, ShardRoutingState.STARTED));
 
-        CheckShrinkReadyStep step = createRandomInstance();
-        IndexMetadata indexMetadata = IndexMetadata.builder(index.getName())
-            .settings(existingSettings)
-            .numberOfShards(1)
-            .numberOfReplicas(1)
-            .build();
-        Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+            CheckShrinkReadyStep step = createRandomInstance();
+            IndexMetadata indexMetadata = IndexMetadata.builder(index.getName())
+                .settings(existingSettings)
+                .numberOfShards(1)
+                .numberOfReplicas(1)
+                .build();
+            Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+            var project = ProjectMetadata.builder(randomProjectIdOrDefault()).indices(indices).build();
 
-        final SingleNodeShutdownMetadata.Type type = randomFrom(
-            SingleNodeShutdownMetadata.Type.REMOVE,
-            SingleNodeShutdownMetadata.Type.REPLACE
-        );
-        final String targetNodeName = type == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
-        ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .metadata(
-                Metadata.builder()
-                    .indices(indices)
-                    .putCustom(
-                        NodesShutdownMetadata.TYPE,
-                        new NodesShutdownMetadata(
-                            Collections.singletonMap(
-                                "node1",
-                                SingleNodeShutdownMetadata.builder()
-                                    .setType(type)
-                                    .setStartedAtMillis(randomNonNegativeLong())
-                                    .setReason("test")
-                                    .setNodeId("node1")
-                                    .setTargetNodeName(targetNodeName)
-                                    .build()
+            final String targetNodeName = type == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
+            final TimeValue grace = type == SIGTERM ? randomTimeValue() : null;
+            ProjectState state = ClusterState.builder(ClusterName.DEFAULT)
+                .metadata(
+                    Metadata.builder()
+                        .put(project)
+                        .putCustom(
+                            NodesShutdownMetadata.TYPE,
+                            new NodesShutdownMetadata(
+                                Map.of(
+                                    "node1",
+                                    SingleNodeShutdownMetadata.builder()
+                                        .setType(type)
+                                        .setStartedAtMillis(randomNonNegativeLong())
+                                        .setReason("test")
+                                        .setNodeId("node1")
+                                        .setNodeEphemeralId("node1")
+                                        .setTargetNodeName(targetNodeName)
+                                        .setGracePeriod(grace)
+                                        .build()
+                                )
                             )
                         )
-                    )
-            )
-            .nodes(
-                DiscoveryNodes.builder()
-                    .add(
-                        DiscoveryNode.createLocal(
-                            Settings.builder().put(node1Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node1").build(),
-                            new TransportAddress(TransportAddress.META_ADDRESS, 9200),
-                            "node1"
+                )
+                .nodes(
+                    DiscoveryNodes.builder()
+                        .add(
+                            DiscoveryNodeUtils.builder("node1")
+                                .applySettings(
+                                    Settings.builder().put(node1Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node1").build()
+                                )
+                                .address(new TransportAddress(TransportAddress.META_ADDRESS, 9200))
+                                .build()
                         )
-                    )
-                    .add(
-                        DiscoveryNode.createLocal(
-                            Settings.builder().put(node2Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node2").build(),
-                            new TransportAddress(TransportAddress.META_ADDRESS, 9201),
-                            "node2"
+                        .add(
+                            DiscoveryNodeUtils.builder("node2")
+                                .applySettings(
+                                    Settings.builder().put(node2Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node2").build()
+                                )
+                                .address(new TransportAddress(TransportAddress.META_ADDRESS, 9201))
+                                .build()
                         )
-                    )
-            )
-            .routingTable(RoutingTable.builder().add(indexRoutingTable).build())
-            .build();
-        assertTrue(step.isCompletable());
-        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-        assertTrue(actualResult.isComplete());
-        assertTrue(step.isCompletable());
+                )
+                .putRoutingTable(project.id(), RoutingTable.builder().add(indexRoutingTable).build())
+                .build()
+                .projectState(project.id());
+            assertTrue(step.isCompletable());
+            ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+            assertTrue(actualResult.complete());
+            assertTrue(step.isCompletable());
+        }
     }
 
     public void testStepBecomesUncompletable() {
-        Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
-        Settings.Builder existingSettings = Settings.builder()
-            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.id)
-            .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
-            .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
-        Settings.Builder expectedSettings = Settings.builder();
-        Settings.Builder node1Settings = Settings.builder();
-        Settings.Builder node2Settings = Settings.builder();
-        requires.forEach((k, v) -> {
-            existingSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
-            expectedSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
-            node1Settings.put(Node.NODE_ATTRIBUTES.getKey() + k, v);
-        });
+        for (SingleNodeShutdownMetadata.Type type : REMOVE_SHUTDOWN_TYPES) {
+            Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
+            Map<String, String> requires = AllocateActionTests.randomAllocationRoutingMap(1, 5);
+            Settings.Builder existingSettings = Settings.builder()
+                .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+                .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
+                .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
+            Settings.Builder expectedSettings = Settings.builder();
+            Settings.Builder node1Settings = Settings.builder();
+            Settings.Builder node2Settings = Settings.builder();
+            requires.forEach((k, v) -> {
+                existingSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
+                expectedSettings.put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + k, v);
+                node1Settings.put(Node.NODE_ATTRIBUTES.getKey() + k, v);
+            });
 
-        IndexRoutingTable.Builder indexRoutingTable = IndexRoutingTable.builder(index)
-            .addShard(TestShardRouting.newShardRouting(new ShardId(index, 0), "node1", true, ShardRoutingState.INITIALIZING));
+            IndexRoutingTable.Builder indexRoutingTable = IndexRoutingTable.builder(index)
+                .addShard(TestShardRouting.newShardRouting(new ShardId(index, 0), "node1", true, ShardRoutingState.INITIALIZING));
 
-        CheckShrinkReadyStep step = createRandomInstance();
-        IndexMetadata indexMetadata = IndexMetadata.builder(index.getName())
-            .settings(existingSettings)
-            .numberOfShards(1)
-            .numberOfReplicas(1)
-            .build();
-        Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+            CheckShrinkReadyStep step = createRandomInstance();
+            IndexMetadata indexMetadata = IndexMetadata.builder(index.getName())
+                .settings(existingSettings)
+                .numberOfShards(1)
+                .numberOfReplicas(1)
+                .build();
+            Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+            var project = ProjectMetadata.builder(randomProjectIdOrDefault()).indices(indices).build();
 
-        final SingleNodeShutdownMetadata.Type type = randomFrom(
-            SingleNodeShutdownMetadata.Type.REMOVE,
-            SingleNodeShutdownMetadata.Type.REPLACE
-        );
-        final String targetNodeName = type == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
-        ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .metadata(
-                Metadata.builder()
-                    .indices(indices)
-                    .putCustom(
-                        NodesShutdownMetadata.TYPE,
-                        new NodesShutdownMetadata(
-                            Collections.singletonMap(
-                                "node1",
-                                SingleNodeShutdownMetadata.builder()
-                                    .setType(type)
-                                    .setStartedAtMillis(randomNonNegativeLong())
-                                    .setReason("test")
-                                    .setNodeId("node1")
-                                    .setTargetNodeName(targetNodeName)
-                                    .build()
+            final String targetNodeName = type == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
+            final TimeValue grace = type == SIGTERM ? randomTimeValue() : null;
+            ProjectState state = ClusterState.builder(ClusterName.DEFAULT)
+                .metadata(
+                    Metadata.builder()
+                        .put(project)
+                        .putCustom(
+                            NodesShutdownMetadata.TYPE,
+                            new NodesShutdownMetadata(
+                                Map.of(
+                                    "node1",
+                                    SingleNodeShutdownMetadata.builder()
+                                        .setType(type)
+                                        .setStartedAtMillis(randomNonNegativeLong())
+                                        .setReason("test")
+                                        .setNodeId("node1")
+                                        .setNodeEphemeralId("node1")
+                                        .setTargetNodeName(targetNodeName)
+                                        .setGracePeriod(grace)
+                                        .build()
+                                )
                             )
                         )
-                    )
-            )
-            .nodes(
-                DiscoveryNodes.builder()
-                    .add(
-                        DiscoveryNode.createLocal(
-                            Settings.builder().put(node1Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node1").build(),
-                            new TransportAddress(TransportAddress.META_ADDRESS, 9200),
-                            "node1"
+                )
+                .nodes(
+                    DiscoveryNodes.builder()
+                        .add(
+                            DiscoveryNodeUtils.builder("node1")
+                                .applySettings(
+                                    Settings.builder().put(node1Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node1").build()
+                                )
+                                .address(new TransportAddress(TransportAddress.META_ADDRESS, 9200))
+                                .build()
                         )
-                    )
-                    .add(
-                        DiscoveryNode.createLocal(
-                            Settings.builder().put(node2Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node2").build(),
-                            new TransportAddress(TransportAddress.META_ADDRESS, 9201),
-                            "node2"
+                        .add(
+                            DiscoveryNodeUtils.builder("node2")
+                                .applySettings(
+                                    Settings.builder().put(node2Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node2").build()
+                                )
+                                .address(new TransportAddress(TransportAddress.META_ADDRESS, 9201))
+                                .build()
                         )
-                    )
-            )
-            .routingTable(RoutingTable.builder().add(indexRoutingTable).build())
-            .build();
-        assertTrue(step.isCompletable());
-        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-        assertFalse(actualResult.isComplete());
-        assertThat(
-            Strings.toString(actualResult.getInfomationContext()),
-            containsString("node with id [node1] is currently marked as shutting down")
-        );
-        assertFalse(step.isCompletable());
+                )
+                .putRoutingTable(project.id(), RoutingTable.builder().add(indexRoutingTable).build())
+                .build()
+                .projectState(project.id());
+            assertTrue(step.isCompletable());
+            ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+            assertFalse(actualResult.complete());
+            assertThat(
+                Strings.toString(actualResult.informationContext()),
+                containsString("node with id [node1] is currently marked as shutting down")
+            );
+            assertFalse(step.isCompletable());
+        }
     }
 
     private void assertAllocateStatus(
@@ -602,31 +609,35 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
             .numberOfReplicas(replicas)
             .build();
         Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+        var project = ProjectMetadata.builder(randomProjectIdOrDefault()).indices(indices).build();
 
-        ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .metadata(Metadata.builder().indices(indices))
+        ProjectState state = ClusterState.builder(ClusterState.EMPTY_STATE)
+            .putProjectMetadata(project)
             .nodes(
                 DiscoveryNodes.builder()
                     .add(
-                        DiscoveryNode.createLocal(
-                            Settings.builder().put(node1Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node1").build(),
-                            new TransportAddress(TransportAddress.META_ADDRESS, 9200),
-                            "node1"
-                        )
+                        DiscoveryNodeUtils.builder("node1")
+                            .applySettings(
+                                Settings.builder().put(node1Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node1").build()
+                            )
+                            .address(new TransportAddress(TransportAddress.META_ADDRESS, 9200))
+                            .build()
                     )
                     .add(
-                        DiscoveryNode.createLocal(
-                            Settings.builder().put(node2Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node2").build(),
-                            new TransportAddress(TransportAddress.META_ADDRESS, 9201),
-                            "node2"
-                        )
+                        DiscoveryNodeUtils.builder("node2")
+                            .applySettings(
+                                Settings.builder().put(node2Settings.build()).put(Node.NODE_NAME_SETTING.getKey(), "node2").build()
+                            )
+                            .address(new TransportAddress(TransportAddress.META_ADDRESS, 9201))
+                            .build()
                     )
             )
-            .routingTable(RoutingTable.builder().add(indexRoutingTable).build())
-            .build();
-        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-        assertEquals(expectedResult.isComplete(), actualResult.isComplete());
-        assertEquals(expectedResult.getInfomationContext(), actualResult.getInfomationContext());
+            .putRoutingTable(project.id(), RoutingTable.builder().add(indexRoutingTable).build())
+            .build()
+            .projectState(project.id());
+        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+        assertEquals(expectedResult.complete(), actualResult.complete());
+        assertEquals(expectedResult.informationContext(), actualResult.informationContext());
     }
 
     public static UnassignedInfo randomUnassignedInfo(String message) {
@@ -649,7 +660,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
             System.currentTimeMillis(),
             delayed,
             UnassignedInfo.AllocationStatus.NO_ATTEMPT,
-            Collections.emptySet(),
+            Set.of(),
             lastAllocatedNodeId
         );
     }
