@@ -31,14 +31,12 @@ import org.elasticsearch.xpack.core.ilm.ShrinkAction;
 import org.elasticsearch.xpack.core.ilm.TimeseriesLifecycleType;
 import org.elasticsearch.xpack.core.ilm.UnfollowAction;
 import org.elasticsearch.xpack.core.ilm.WaitForSnapshotAction;
-import org.elasticsearch.xpack.core.ilm.action.PutLifecycleAction.Request;
 import org.junit.Before;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-public class PutLifecycleRequestTests extends AbstractXContentSerializingTestCase<Request> {
+public class PutLifecycleRequestTests extends AbstractXContentSerializingTestCase<PutLifecycleRequest> {
 
     private String lifecycleName;
 
@@ -48,24 +46,38 @@ public class PutLifecycleRequestTests extends AbstractXContentSerializingTestCas
     }
 
     @Override
-    protected Request createTestInstance() {
-        return new Request(LifecyclePolicyTests.randomTimeseriesLifecyclePolicy(lifecycleName));
+    protected PutLifecycleRequest createTestInstance() {
+        return new PutLifecycleRequest(
+            TEST_REQUEST_TIMEOUT,
+            TEST_REQUEST_TIMEOUT,
+            LifecyclePolicyTests.randomTimeseriesLifecyclePolicy(lifecycleName)
+        );
     }
 
     @Override
-    protected Writeable.Reader<Request> instanceReader() {
-        return Request::new;
+    protected Writeable.Reader<PutLifecycleRequest> instanceReader() {
+        return PutLifecycleRequest::new;
     }
 
     @Override
-    protected Request doParseInstance(XContentParser parser) {
-        return PutLifecycleAction.Request.parseRequest(lifecycleName, parser);
+    protected PutLifecycleRequest doParseInstance(XContentParser parser) {
+        return PutLifecycleRequest.parseRequest(new PutLifecycleRequest.Factory() {
+            @Override
+            public PutLifecycleRequest create(LifecyclePolicy lifecyclePolicy) {
+                return new PutLifecycleRequest(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT, lifecyclePolicy);
+            }
+
+            @Override
+            public String getPolicyName() {
+                return lifecycleName;
+            }
+        }, parser);
     }
 
     @Override
     protected NamedWriteableRegistry getNamedWriteableRegistry() {
         return new NamedWriteableRegistry(
-            Arrays.asList(
+            List.of(
                 new NamedWriteableRegistry.Entry(
                     LifecycleType.class,
                     TimeseriesLifecycleType.TYPE,
@@ -76,7 +88,7 @@ public class PutLifecycleRequestTests extends AbstractXContentSerializingTestCas
                 new NamedWriteableRegistry.Entry(LifecycleAction.class, DeleteAction.NAME, DeleteAction::readFrom),
                 new NamedWriteableRegistry.Entry(LifecycleAction.class, ForceMergeAction.NAME, ForceMergeAction::new),
                 new NamedWriteableRegistry.Entry(LifecycleAction.class, ReadOnlyAction.NAME, ReadOnlyAction::new),
-                new NamedWriteableRegistry.Entry(LifecycleAction.class, RolloverAction.NAME, RolloverAction::new),
+                new NamedWriteableRegistry.Entry(LifecycleAction.class, RolloverAction.NAME, RolloverAction::read),
                 new NamedWriteableRegistry.Entry(LifecycleAction.class, ShrinkAction.NAME, ShrinkAction::new),
                 new NamedWriteableRegistry.Entry(LifecycleAction.class, FreezeAction.NAME, in -> FreezeAction.INSTANCE),
                 new NamedWriteableRegistry.Entry(LifecycleAction.class, SetPriorityAction.NAME, SetPriorityAction::new),
@@ -92,7 +104,7 @@ public class PutLifecycleRequestTests extends AbstractXContentSerializingTestCas
     protected NamedXContentRegistry xContentRegistry() {
         List<NamedXContentRegistry.Entry> entries = new ArrayList<>(ClusterModule.getNamedXWriteables());
         entries.addAll(
-            Arrays.asList(
+            List.of(
                 new NamedXContentRegistry.Entry(
                     LifecycleType.class,
                     new ParseField(TimeseriesLifecycleType.TYPE),
@@ -124,18 +136,14 @@ public class PutLifecycleRequestTests extends AbstractXContentSerializingTestCas
         return new NamedXContentRegistry(entries);
     }
 
-    protected boolean supportsUnknownFields() {
-        return false;
-    }
-
     @Override
-    protected Request mutateInstance(Request request) {
+    protected PutLifecycleRequest mutateInstance(PutLifecycleRequest request) {
         String name = randomBoolean() ? lifecycleName : randomAlphaOfLength(5);
         LifecyclePolicy policy = randomValueOtherThan(
             request.getPolicy(),
             () -> LifecyclePolicyTests.randomTimeseriesLifecyclePolicy(name)
         );
-        return new Request(policy);
+        return new PutLifecycleRequest(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT, policy);
     }
 
 }
