@@ -6,11 +6,17 @@
  */
 package org.elasticsearch.xpack.ml.action;
 
+import org.apache.lucene.util.SetOnce;
 import org.elasticsearch.action.admin.cluster.node.stats.NodeStats;
 import org.elasticsearch.action.admin.cluster.node.stats.NodesStatsResponse;
+import org.elasticsearch.action.bulk.FailureStoreMetrics;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
+import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.ProjectId;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.project.TestProjectResolvers;
 import org.elasticsearch.cluster.routing.OperationRouting;
 import org.elasticsearch.cluster.service.ClusterApplierService;
 import org.elasticsearch.cluster.service.ClusterService;
@@ -18,6 +24,9 @@ import org.elasticsearch.cluster.service.MasterService;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.EsExecutors;
+import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.features.FeatureService;
+import org.elasticsearch.features.NodeFeature;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.IngestService;
 import org.elasticsearch.ingest.IngestStats;
@@ -27,8 +36,9 @@ import org.elasticsearch.plugins.IngestPlugin;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.xpack.core.ml.MachineLearningField;
-import org.elasticsearch.xpack.ml.inference.ModelAliasMetadata;
+import org.elasticsearch.xpack.core.ml.inference.ModelAliasMetadata;
 import org.elasticsearch.xpack.ml.inference.ingest.InferenceProcessor;
+import org.elasticsearch.xpack.ml.notifications.InferenceAuditor;
 import org.junit.Before;
 
 import java.time.Instant;
@@ -78,7 +88,8 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                 Map<String, Processor.Factory> processorFactories,
                 String tag,
                 String description,
-                Map<String, Object> config
+                Map<String, Object> config,
+                ProjectId projectId
             ) {
                 return new NotInferenceProcessor();
             }
@@ -93,7 +104,12 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             when(licenseState.isAllowed(MachineLearningField.ML_API_FEATURE)).thenReturn(true);
             factoryMap.put(
                 InferenceProcessor.TYPE,
-                new InferenceProcessor.Factory(parameters.client, parameters.ingestService.getClusterService(), Settings.EMPTY)
+                new InferenceProcessor.Factory(
+                    parameters.client,
+                    parameters.ingestService.getClusterService(),
+                    Settings.EMPTY,
+                    new SetOnce<>(mock(InferenceAuditor.class))
+                )
             );
 
             factoryMap.put("not_inference", new NotInferenceProcessor.Factory());
@@ -110,6 +126,7 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
     public void setUpVariables() {
         ThreadPool tp = mock(ThreadPool.class);
         when(tp.generic()).thenReturn(EsExecutors.DIRECT_EXECUTOR_SERVICE);
+        when(tp.getThreadContext()).thenReturn(new ThreadContext(Settings.EMPTY));
         client = mock(Client.class);
         Settings settings = Settings.builder().put("node.name", "InferenceProcessorFactoryTests_node").build();
         ClusterSettings clusterSettings = new ClusterSettings(
@@ -120,12 +137,30 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                     MasterService.MASTER_SERVICE_SLOW_TASK_LOGGING_THRESHOLD_SETTING,
                     OperationRouting.USE_ADAPTIVE_REPLICA_SELECTION_SETTING,
                     ClusterService.USER_DEFINED_METADATA,
-                    ClusterApplierService.CLUSTER_SERVICE_SLOW_TASK_LOGGING_THRESHOLD_SETTING
+                    ClusterApplierService.CLUSTER_SERVICE_SLOW_TASK_LOGGING_THRESHOLD_SETTING,
+                    ClusterApplierService.CLUSTER_SERVICE_SLOW_TASK_THREAD_DUMP_TIMEOUT_SETTING
                 )
             )
         );
         clusterService = new ClusterService(settings, clusterSettings, tp, null);
-        ingestService = new IngestService(clusterService, tp, null, null, null, Collections.singletonList(SKINNY_INGEST_PLUGIN), client);
+        ingestService = new IngestService(
+            clusterService,
+            tp,
+            null,
+            null,
+            null,
+            Collections.singletonList(SKINNY_INGEST_PLUGIN),
+            client,
+            null,
+            FailureStoreMetrics.NOOP,
+            TestProjectResolvers.alwaysThrow(),
+            new FeatureService(List.of()) {
+                @Override
+                public boolean clusterHasFeature(ClusterState state, NodeFeature feature) {
+                    return DataStream.DATA_STREAM_FAILURE_STORE_FEATURE.equals(feature);
+                }
+            }
+        );
     }
 
     public void testInferenceIngestStatsByModelId() {
@@ -133,9 +168,24 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             buildNodeStats(
                 new IngestStats.Stats(2, 2, 3, 4),
                 Arrays.asList(
-                    new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(0, 0, 3, 1)),
-                    new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(1, 1, 0, 1)),
-                    new IngestStats.PipelineStat("pipeline3", new IngestStats.Stats(2, 1, 1, 1))
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline1",
+                        new IngestStats.Stats(0, 0, 3, 1),
+                        new IngestStats.ByteStats(789, 0)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline2",
+                        new IngestStats.Stats(1, 1, 0, 1),
+                        new IngestStats.ByteStats(123, 123)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline3",
+                        new IngestStats.Stats(2, 1, 1, 1),
+                        new IngestStats.ByteStats(1234, 5678)
+                    )
                 ),
                 Arrays.asList(
                     Arrays.asList(
@@ -157,9 +207,24 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             buildNodeStats(
                 new IngestStats.Stats(15, 5, 3, 4),
                 Arrays.asList(
-                    new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 3, 1)),
-                    new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(1, 1, 0, 1)),
-                    new IngestStats.PipelineStat("pipeline3", new IngestStats.Stats(2, 1, 1, 1))
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline1",
+                        new IngestStats.Stats(10, 1, 3, 1),
+                        new IngestStats.ByteStats(5678, 123456)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline2",
+                        new IngestStats.Stats(1, 1, 0, 1),
+                        new IngestStats.ByteStats(111, 222)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline3",
+                        new IngestStats.Stats(2, 1, 1, 1),
+                        new IngestStats.ByteStats(555, 777)
+                    )
                 ),
                 Arrays.asList(
                     Arrays.asList(
@@ -194,12 +259,22 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
 
         IngestStats expectedStatsModel1 = new IngestStats(
             new IngestStats.Stats(10, 1, 6, 2),
-            Collections.singletonList(new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 6, 2))),
-            Collections.singletonMap(
-                "pipeline1",
-                Arrays.asList(
-                    new IngestStats.ProcessorStat("inference", "inference", new IngestStats.Stats(120, 12, 0, 1)),
-                    new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
+            Collections.singletonList(
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline1",
+                    new IngestStats.Stats(10, 1, 6, 2),
+                    new IngestStats.ByteStats(6467, 123456)
+                )
+            ),
+            Map.of(
+                ProjectId.DEFAULT,
+                Collections.singletonMap(
+                    "pipeline1",
+                    Arrays.asList(
+                        new IngestStats.ProcessorStat("inference", "inference", new IngestStats.Stats(120, 12, 0, 1)),
+                        new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
+                    )
                 )
             )
         );
@@ -207,10 +282,20 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats expectedStatsModel2 = new IngestStats(
             new IngestStats.Stats(12, 3, 6, 4),
             Arrays.asList(
-                new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 6, 2)),
-                new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(2, 2, 0, 2))
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline1",
+                    new IngestStats.Stats(10, 1, 6, 2),
+                    new IngestStats.ByteStats(6467, 123456)
+                ),
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline2",
+                    new IngestStats.Stats(2, 2, 0, 2),
+                    new IngestStats.ByteStats(234, 345)
+                )
             ),
-            new HashMap<>() {
+            Map.of(ProjectId.DEFAULT, new HashMap<>() {
                 {
                     put(
                         "pipeline2",
@@ -227,7 +312,7 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                         )
                     );
                 }
-            }
+            })
         );
 
         assertThat(ingestStatsMap, hasEntry("trained_model_1", expectedStatsModel1));
@@ -239,11 +324,14 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         List<IngestStats.PipelineStat> pipelineNames,
         List<List<IngestStats.ProcessorStat>> processorStats
     ) {
-        List<String> pipelineids = pipelineNames.stream().map(IngestStats.PipelineStat::getPipelineId).collect(Collectors.toList());
+        List<String> pipelineids = pipelineNames.stream().map(IngestStats.PipelineStat::pipelineId).collect(Collectors.toList());
         IngestStats ingestStats = new IngestStats(
             overallStats,
             pipelineNames,
-            IntStream.range(0, pipelineids.size()).boxed().collect(Collectors.toMap(pipelineids::get, processorStats::get))
+            Map.of(
+                ProjectId.DEFAULT,
+                IntStream.range(0, pipelineids.size()).boxed().collect(Collectors.toMap(pipelineids::get, processorStats::get))
+            )
         );
         return new NodeStats(
             mock(DiscoveryNode.class),
@@ -260,6 +348,8 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             null,
             null,
             ingestStats,
+            null,
+            null,
             null,
             null,
             null
