@@ -9,6 +9,7 @@ package org.elasticsearch.xpack.spatial.index.mapper;
 
 import org.elasticsearch.index.mapper.MappedFieldType;
 import org.elasticsearch.index.mapper.MapperTestCase;
+import org.elasticsearch.plugins.ExtensiblePlugin;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.spatial.LocalStateSpatialPlugin;
@@ -16,6 +17,8 @@ import org.elasticsearch.xpack.spatial.LocalStateSpatialPlugin;
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 /** Base class for testing geo field mappers */
 public abstract class GeoFieldMapperTests extends MapperTestCase {
@@ -24,7 +27,15 @@ public abstract class GeoFieldMapperTests extends MapperTestCase {
 
     @Override
     protected Collection<Plugin> getPlugins() {
-        return Collections.singletonList(new LocalStateSpatialPlugin());
+        var plugin = new LocalStateSpatialPlugin();
+        plugin.loadExtensions(new ExtensiblePlugin.ExtensionLoader() {
+            @Override
+            public <T> List<T> loadExtensions(Class<T> extensionPointType) {
+                return List.of();
+            }
+        });
+
+        return Collections.singletonList(plugin);
     }
 
     @Override
@@ -38,6 +49,11 @@ public abstract class GeoFieldMapperTests extends MapperTestCase {
     @Override
     protected Object getSampleValueForDocument() {
         return "POINT (14.0 15.0)";
+    }
+
+    @Override
+    protected Object getSampleObjectForDocument() {
+        return Map.of("x", 14.0, "y", 15.0);
     }
 
     protected abstract String getFieldName();
